--- a/src/main/java/com/github/ulikoehler/chipdbeditor/ChipDBEditorFrame.form
+++ b/src/main/java/com/github/ulikoehler/chipdbeditor/ChipDBEditorFrame.form
@@ -33,7 +33,7 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="yamlScrollPane" pref="419" max="32767" attributes="2"/>
+                          <Component id="yamlScrollPane" pref="423" max="32767" attributes="2"/>
                           <Component id="notesPanel" alignment="0" max="32767" attributes="1"/>
                       </Group>
                   </Group>
@@ -57,12 +57,12 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="descriptionLabel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="descriptionField" pref="854" max="32767" attributes="0"/>
+                      <Component id="descriptionField" pref="862" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="aliasesLabel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="aliasesField" pref="748" max="32767" attributes="0"/>
+                      <Component id="aliasesField" pref="754" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -124,7 +124,7 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="pinsScrollPane" alignment="0" pref="481" max="32767" attributes="0"/>
+                      <Component id="pinsScrollPane" alignment="0" pref="489" max="32767" attributes="0"/>
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="pinsLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
@@ -140,7 +140,7 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="pinsScrollPane" min="-2" pref="216" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="8" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="pinsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="pinsSpinner" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -203,7 +203,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="specsScrollPane" pref="481" max="32767" attributes="0"/>
+                  <Component id="specsScrollPane" pref="493" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -254,11 +254,11 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="407" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="411" max="32767" attributes="0"/>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" pref="383" max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" pref="387" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
